--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "react": "^18.2.0",
     "react-awesome-reveal": "^4.2.5",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.16.0"
+    "react-router-dom": "^6.16.0",
+    "video.js": "^8.5.2",
+    "videojs-record": "^4.6.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
