--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-awesome-reveal": "^4.2.5",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0",
+    "react-youtube": "^10.1.0",
     "video.js": "^8.5.2",
     "videojs-record": "^4.6.0"
   },
